1. Implemented forward kinematics package 2. Added rviz configuration file, launch file and some reading material.

--- a/project3_solution/robot_sim/CMakeLists.txt
+++ b/project3_solution/robot_sim/CMakeLists.txt
@@ -29,7 +29,7 @@ add_library(robot_sim
   src/velocity_controller.cpp
   src/position_controller.cpp
 )
-
+# link_directories(/opt/ros/kinetic/lib/)
 link_directories(/opt/ros/indigo/lib/)
 add_executable(robot_sim_bringup src/robot_sim_bringup.cpp)
 target_link_libraries(robot_sim_bringup ${catkin_LIBRARIES} robot_sim urdf)
